--- a/app/src/main/res/menu/row_race.xml
+++ b/app/src/main/res/menu/row_race.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/one" 
-        android:title="Set alarm" />
+        android:title="@string/setAlarm" />
 </menu>
