--- a/app/src/main/res/menu/row_race.xml
+++ b/app/src/main/res/menu/row_race.xml
@@ -4,13 +4,14 @@
     <item
         android:id="@+id/set1notif"
         android:orderInCategory="1"
-        android:title="@string/setAlarm"
+        android:title=""
+        android:visible="false"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/rem1notif"
         android:orderInCategory="1"
-        android:title="@string/removeAlarm"
+        android:title=""
         android:visible="false"
         app:showAsAction="never"/>
 
