--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.models.Series" />
+            type="com.pedrojtmartins.racingcalendar.models.Series"/>
 
-        <import type="android.view.View" />
+        <import type="android.view.View"/>
     </data>
 
     <LinearLayout style="@style/SeriesRowParent">
 
         <LinearLayout style="@style/SeriesRow">
 
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/series_url"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@color/arrowsTint"
-                android:visibility="@{data.hasUrl ? View.VISIBLE : View.GONE}"
-                app:srcCompat="@drawable/link_black" />
+                android:orientation="vertical">
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/series_url"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tint="@color/arrowsTint"
+                    android:visibility="@{data.hasUrl ? View.VISIBLE : View.GONE}"
+                    app:srcCompat="@drawable/link_black"/>
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/results"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tint="@color/arrowsTint"
+                    android:visibility="@{data.hasUrl ? View.VISIBLE : View.GONE}"
+                    app:srcCompat="@drawable/results"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -36,7 +50,7 @@
                 <TextView
                     style="@style/SeriesTitle"
                     android:text="@{data.name}"
-                    tools:text="F1 - Formula 1" />
+                    tools:text="F1 - Formula 1"/>
 
                 <TextView
                     android:id="@+id/seriesCompleted"
@@ -44,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/seriesIsOver"
                     android:textColor="#333"
-                    android:visibility="@{data.percentageCompleted >= 100 ? View.VISIBLE : View.GONE}" />
+                    android:visibility="@{data.percentageCompleted >= 100 ? View.VISIBLE : View.GONE}"/>
 
                 <LinearLayout
                     android:id="@+id/seriesState"
@@ -58,27 +72,27 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="4dp"
                         android:text="@string/next"
-                        android:textColor="#333" />
+                        android:textColor="#333"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="4dp"
                         android:text="@{data.nextRaceString}"
-                        android:textColor="#333" />
+                        android:textColor="#333"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="4dp"
                         android:text="@string/of"
-                        android:textColor="#333" />
+                        android:textColor="#333"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{data.totalRacesString}"
-                        android:textColor="#333" />
+                        android:textColor="#333"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -87,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:tint="@color/arrowsTint"
-                app:srcCompat="@drawable/arrow_black" />
+                app:srcCompat="@drawable/arrow_black"/>
 
 
         </LinearLayout>
@@ -100,6 +114,6 @@
             android:layout_height="5dp"
             android:indeterminate="false"
             android:progress="@{data.percentageCompleted}"
-            android:progressDrawable="@drawable/series_progressbar" />
+            android:progressDrawable="@drawable/series_progressbar"/>
     </LinearLayout>
 </layout>
