--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -4,6 +4,15 @@
         xmlns:tools="http://schemas.android.com/tools"
         tools:context="com.pedrojtmartins.racingcalendar.views.activities.ResultsActivity">
 
+    <data>
+
+        <variable
+            name="data"
+            type="com.pedrojtmartins.racingcalendar.models.ResultsViewModelStatus"/>
+
+        <import type="android.view.View"/>
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,13 +36,52 @@
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
-        <include
-            layout="@layout/row_results_header"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="@{data.loadComplete ? View.GONE : View.VISIBLE}"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="@{data.loadComplete ? View.VISIBLE : View.GONE}">
+
+                <include
+                    layout="@layout/row_results_header"/>
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+
+                <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:gravity="right"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:padding="8dp">-->
+
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginRight="8dp"-->
+                <!--android:text="@string/poweredby"-->
+                <!--android:textStyle="bold"/>-->
+
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="driverDB.com"/>-->
+                <!--</LinearLayout>-->
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
