--- a/app/src/main/res/layout/alert_dialog_pick_calendar.xml
+++ b/app/src/main/res/layout/alert_dialog_pick_calendar.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="#fafafa"
@@ -12,9 +14,12 @@
         android:text="@string/exportRaceTo"
         android:textColor="#000"/>
 
-    <Spinner
+    <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/dropDown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:spinnerMode="dropdown"/>
+        android:popupBackground="#ffffff"
+        android:spinnerMode="dropdown"
+        app:backgroundTint="#3e3e3e"
+        tools:layout_height="40dp"/>
 </LinearLayout>
