--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
                  android:id="@android:id/text1"
-                 style="?android:attr/spinnerDropDownItemStyle"
-                 android:singleLine="true"
                  android:layout_width="match_parent"
-                 android:layout_height="?android:attr/listPreferredItemHeight"
+                 android:layout_height="wrap_content"
                  android:ellipsize="marquee"
-                 android:textColor="#000000"/>
+                 android:lines="1"
+                 android:paddingBottom="16dp"
+                 android:paddingLeft="8dp"
+                 android:paddingRight="8dp"
+                 android:paddingTop="16dp"
+                 android:textColor="#000000"
+                 tools:background="#fff"
+                 tools:text="O meu calendário"/>
+    <!--style="?android:attr/spinnerDropDownItemStyle"-->
